[package]
name = "yt-to-cd"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
iced = { version = "0.13.1", features = ["image", "tokio"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "process", "io-util", "io-std"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }